Build Fixes, Correct Moditect Implementation for Package, POM Versioning Corrections across